--- a/xmrig-core/Makefile
+++ b/xmrig-core/Makefile
@@ -9,7 +9,7 @@ PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.bz2
 PKG_SOURCE_URL:=http://192.168.222.111:8001/
 PKG_HASH:=c531b45238ace21cf4cbae44955cfd40
 
-PKG_MAINTAINER:=Your Name <your.email@example.com>
+PKG_MAINTAINER:=unknown
 PKG_LICENSE:=GPL-3.0-only
 PKG_LICENSE_FILES:=LICENSE
 
